# kaonic-radio

./: .gitignore  .rust-analyzer.json  Cargo.toml  Dockerfile  README.md
.cargo/: config.toml
.github/workflows/: build-host-tools.yml  build-kaonic-radio.yml  build.yml
certs/: beechat-ota.pub.pem
kaonic-commd/: Cargo.toml  build.rs  kaonic-commd.service  kaonic-plugin.toml
kaonic-commd-cli/: Cargo.toml  build.rs
kaonic-commd-cli/src/: app.rs  events.rs  grpc.rs  main.rs  ui.rs
kaonic-commd/proto/kaonic/: kaonic.proto
kaonic-commd/src/: controller.rs  grpc_server.rs  main.rs  radio_server.rs  radio_service.rs
kaonic-commd/src/grpc/: device.rs  mod.rs  network.rs  radio.rs
kaonic-core/: Cargo.toml
kaonic-ctrl/: Cargo.toml
kaonic-ctrl/src/: client.rs  error.rs  lib.rs  network.rs  peer.rs  protocol.rs  radio.rs  server.rs
kaonic-ctrl/tests/: test_radio_client.rs
kaonic-factory/: Cargo.toml  build.rs  kaonic-factory.service  kaonic-plugin.toml
kaonic-factory/proto/kaonic/: kaonic.proto  kaonic_factory.proto
kaonic-factory/src/: main.rs
kaonic-factory/src/grpc/: mod.rs
kaonic-factory/src/grpc/factory/: bluetooth.rs  i2c.rs  memory.rs  mod.rs  pmic.rs  rf215.rs  vendor.rs  wifi.rs
kaonic-fpga/: Cargo.toml
kaonic-fpga/src/: lib.rs
kaonic-fpga/src/platform/: mod.rs  platform_kaonic1s.rs
kaonic-frame/: Cargo.toml
kaonic-frame/src/: error.rs  frame.rs
kaonic-gui/: Cargo.toml  build.rs
kaonic-gui/src/: grpc_client.rs  iperf.rs  main.rs  ui.rs
kaonic-iperf/: Cargo.toml  build.rs  kaonic-config.toml
kaonic-iperf/src/: config.rs  main.rs
kaonic-net/: Cargo.toml
kaonic-net/src/: coder.rs  demuxer.rs  error.rs  generator.rs  lib.rs  muxer.rs  network.rs  packet.rs  request.rs
kaonic-qos/: Cargo.toml
kaonic-qos/src/: lib.rs  profile.rs
kaonic-radio/: Cargo.toml  build.rs
kaonic-radio/src/: error.rs  frame.rs  lib.rs  modulation.rs  payload.rs  radio.rs
kaonic-radio/src/platform/: linux.rs  linux_rf215.rs  mod.rs  platform_dummy.rs  platform_kaonic1s.rs  rf215.rs
kaonic-radio/src/platform/kaonic1s/: machine.rs  mod.rs
ota/: kaonic-ota.py
radio-common/: Cargo.toml
radio-common/src/: frequency.rs  lib.rs
radio-common/src/modulation/: mod.rs  ofdm.rs  qpsk.rs
radio-rf215/: Cargo.toml
radio-rf215/src/: baseband.rs  bus.rs  config.rs  error.rs  frame.rs  lib.rs  modulation.rs  radio.rs  regs.rs  transceiver.rs
scripts/: create-ota.py  create-ota.sh  install_sdk.sh  requirements.txt  update_service.sh
