[workspace]
resolver = "2"
members = [ 
    # Applications
    "kaonic-commd",
    "kaonic-commd-cli",
    "kaonic-factory",
    "kaonic-iperf",

    # Integration
    "kaonic-ctrl", 

    # Hardware BSP
    "kaonic-fpga",
    "kaonic-radio",

    # Algorithms
    "kaonic-net",
    "kaonic-frame",

    # Drivers
    "radio-rf215",
    "radio-common"
]

# exclude = ["kaonic-gui"]

