[package]
name = "kaonic-commd-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "kaonic-commd-cli"
path = "src/main.rs"

[dependencies]
# gRPC
tonic = "0.13.0"
prost = "0.13.5"

# Async runtime
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# TUI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# Utilities
futures = "0.3"
clap = { version = "4", features = ["derive"] }

[build-dependencies]
tonic-build = "0.13.0"
