[package]
name = "kaonic-commd"
version = "0.1.0"
edition = "2021"

[dependencies]

# Kaonic
radio-rf215 = { path="../radio-rf215/" }
kaonic-radio = { path="../kaonic-radio/" }

# Logging
simple_logger = "5.0.0"
log = "0.4"

# Protobuf and gRPC
tonic = "0.13.0"
prost = "0.13.5"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["sync"] }

[build-dependencies]
tonic-build = "0.13.0"

