[package]
name = "kaonic-ctrl"
version = "0.1.1"
edition = "2024"

[dependencies]

# Kaonic
kaonic-net = { path="../kaonic-net/" }
kaonic-frame = { path="../kaonic-frame/" }
radio-common = { path="../radio-common/" }

# Protocol
rmp = "=0.8.14"
rmp-serde = "=1.3.0"
serde = "1.0.228"
serde_bytes = "0.11.19"

rand = { version = "=0.8.5", default-features = false, features = ["getrandom"] }


# Logging
log = "0.4"

# Async IO
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal", "net", "tracing"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = "0.7.15"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
env_logger = "0.11.9"


