[package]
name = "kaonic-gui"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[features]
default = []
machine-kaonic1s = []
machine-host = []

[dependencies]
# GUI
imgui = "0.12"
imgui-winit-support = "0.12"
imgui-glow-renderer = "0.12"
glutin = "0.31"
glutin-winit = "0.4"
winit = "0.29"
glow = "0.13"
raw-window-handle = "0.5"

# gRPC and Protobuf
tonic = "0.13.0"
prost = "0.13.5"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# Utilities
chrono = "0.4"
parking_lot = "0.12"
env_logger = "0.11"
hex = "0.4"
sha2 = "0.10"

# HTTP client for OTA
reqwest = { version = "0.11", features = ["blocking", "multipart", "json"] }
serde_json = "1.0"

# Local crates
kaonic-net = { path = "../kaonic-net/" }

# File dialog
rfd = "0.12"

# CLI parsing
clap = { version = "4.5", features = ["derive"] }

[build-dependencies]
tonic-build = "0.13.0"
