[package]
name = "kaonic-iperf"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Network performance testing tool for Kaonic radio"
repository = "https://github.com/BeechatNetworkSystemsLtd/kaonic-radio"

[features]
default = []
machine-kaonic1s = []
machine-host = []

[dependencies]
# Logging
simple_logger = "=5.0.0"
log = "0.4"

# Protobuf and gRPC
tonic = "=0.13.0"
prost = "=0.13.5"
tokio = { version = "=1.48.0", features = ["macros", "rt-multi-thread", "time", "signal"] }
tokio-stream = { version = "=0.1.16", features = ["sync"] }

# CLI
clap = { version = "4", features = ["derive"] }

# CRC
crc32fast = "1.4"

# Config parsing
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"

[build-dependencies]
tonic-build = "=0.13.0"
