[package]
name = "kaonic-iperf"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Network performance testing tool for Kaonic radio"
repository = "https://github.com/BeechatNetworkSystemsLtd/kaonic-radio"

[features]
default = []
machine-kaonic1s = []
machine-host = []

[dependencies]
# Logging
simple_logger = "=5.0.0"
log = "0.4"

# Kaonic
kaonic-ctrl = { path = "../kaonic-ctrl/" }
kaonic-frame = { path = "../kaonic-frame/" }
radio-common = { path = "../radio-common/" }

# Async
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time", "signal"] }
tokio-util = "0.7.15"

# CLI
clap = { version = "4", features = ["derive"] }

# CRC
crc32fast = "1.4"

# Config parsing
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"

# Random
rand = { version = "=0.8.5" }
