[package]
name = "kaonic-radio"
version = "0.1.0"
edition = "2021"

[features]
default = ["machine-kaonic1s"]
machine-kaonic1s = []
machine-host = []

[dependencies]
radio-rf215 = { path="../radio-rf215/" }

# Logging
simple_logger = "=5.0.0"
log = "0.4"

crc = "=3.3.0"

[target.'cfg(feature = "machine-kaonic1s")'.dependencies]
libgpiod = "0.2.2"
linux-embedded-hal = { version = "0.4.0", default-features = false, features = [ "spi" ] }

