[package]
name = "kaonic-radio"
version = "0.1.0"
edition = "2021"

[features]
default = ["machine-kaonic1s"]
machine-kaonic1s = ["dep:libgpiod", "dep:linux-embedded-hal"]
machine-host = []

[dependencies]
radio-common = { path="../radio-common/" }
radio-rf215 = { path="../radio-rf215/" }
kaonic-frame = { path="../kaonic-frame/" }

# Logging
log = "0.4"

# Optional dependencies for kaonic1s hardware
libgpiod = { version = "0.2.2", optional = true }
linux-embedded-hal = { version = "0.4.0", default-features = false, features = [ "spi" ], optional = true }

